<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Shablon1"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <TableRow>
    <TextView
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:text="@string/Createalarm"
        android:textSize="24dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp">
    </TextView>
    <androidx.appcompat.widget.AppCompatImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="37dp"
        android:background="@color/Shablon1"
        android:src="@drawable/Back">
    </androidx.appcompat.widget.AppCompatImageButton>
    </TableRow>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="148dp"
            android:layout_height="32dp"
            android:background="@drawable/alarm"
            android:orientation="horizontal"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="49dp">
            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/clock">
            </ImageView>
            <EditText
                android:layout_width="45dp"
                android:layout_height="21dp"
                android:background="@drawable/alarm"
                android:textColor="@color/grey"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="6dp"
                android:text="@string/time">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="148dp"
            android:layout_height="32dp"
            android:background="@drawable/alarm"
            android:orientation="horizontal"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="49dp">
            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/date">
            </ImageView>
            <EditText
                android:layout_width="91dp"
                android:layout_height="21dp"
                android:background="@drawable/alarm"
                android:textColor="@color/grey"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="6dp"
                android:text="@string/date">
            </EditText>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:layout_marginLeft="24dp"
        android:text="@string/repeat"
        android:textColor="@color/white"
        android:textSize="16dp">
    </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="14dp"
        android:layout_marginLeft="23dp">
        <CheckBox
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:buttonTint="@color/white"
            android:background="@drawable/checkbox">
        </CheckBox>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/Mon"
            android:textColor="@color/white"
            android:textSize="16dp">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="23dp">
        <CheckBox
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:buttonTint="@color/white"
            android:background="@drawable/checkbox">
        </CheckBox>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/Tue"
            android:textColor="@color/white"
            android:textSize="16dp">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="23dp">
        <CheckBox
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:buttonTint="@color/white"
            android:background="@drawable/checkbox">
        </CheckBox>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/Wed"
            android:textColor="@color/white"
            android:textSize="16dp">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="23dp">
        <CheckBox
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:buttonTint="@color/white"
            android:background="@drawable/checkbox">
        </CheckBox>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/Thu"
            android:textColor="@color/white"
            android:textSize="16dp">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="23dp">
        <CheckBox
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:buttonTint="@color/white"
            android:background="@drawable/checkbox">
        </CheckBox>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/Fri"
            android:textColor="@color/white"
            android:textSize="16dp">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="23dp">
        <CheckBox
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:buttonTint="@color/white"
            android:background="@drawable/checkbox">
        </CheckBox>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/Sat"
            android:textColor="@color/white"
            android:textSize="16dp">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="23dp">
        <CheckBox
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:buttonTint="@color/white"
            android:background="@drawable/checkbox">
        </CheckBox>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/Sun"
            android:textColor="@color/white"
            android:textSize="16dp">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/Createalarm"
            android:textColor="@color/white"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="48dp"
            android:textAllCaps="false"
            android:textSize="18dp">
        </androidx.appcompat.widget.AppCompatButton>
    </LinearLayout>



</TableLayout>