<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Shablon1"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="@string/Profile"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginLeft="19dp"
            android:layout_marginTop="25dp">
        </TextView>
        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:background="@color/Shablon1"
            android:src="@drawable/Back">
        </androidx.appcompat.widget.AppCompatImageButton>
    </LinearLayout>
        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="84dp"
            android:layout_marginLeft="84dp"
            android:background="@color/Shablon1"
            android:src="@drawable/Av">
        </androidx.appcompat.widget.AppCompatImageButton>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Acess"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginLeft="113dp"
            android:layout_marginTop="62dp">
        </TextView>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/Vhod"
            android:textColor="@color/white"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="48dp"
            android:textSize="18dp"
            android:textAllCaps="false">
        </androidx.appcompat.widget.AppCompatButton>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/Registration"
            android:textColor="@color/white"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="26dp"
            android:textSize="18dp"
            android:textAllCaps="false">
        </androidx.appcompat.widget.AppCompatButton>
</LinearLayout>