<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:rowCount="6"
    android:background="@color/Shablon1"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Edittask"
        android:textSize="24dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="23dp"
        android:layout_marginLeft="20dp" />
    <androidx.appcompat.widget.AppCompatImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="78dp"
        android:background="@color/Shablon1"
        android:src="@drawable/Back">
    </androidx.appcompat.widget.AppCompatImageButton>
    </LinearLayout>
<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="horizontal">
    <LinearLayout
        android:layout_width="312dp"
        android:layout_height="32dp"
        android:background="@drawable/alarm"
        android:orientation="horizontal"
        android:layout_marginTop="65dp"
        android:layout_marginLeft="23dp">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:background="@drawable/alarm"
            android:textColor="@color/grey"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="6dp"
            android:text="@string/Activityname">
        </EditText>
    </LinearLayout>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="148dp"
            android:layout_height="32dp"
            android:background="@drawable/alarm"
            android:orientation="horizontal"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp">
            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/clock">
            </ImageView>
            <EditText
                android:layout_width="45dp"
                android:layout_height="21dp"
                android:background="@drawable/alarm"
                android:textColor="@color/grey"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="6dp"
                android:text="@string/time">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="148dp"
            android:layout_height="32dp"
            android:background="@drawable/alarm"
            android:orientation="horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp">
            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/date">
            </ImageView>
            <EditText
                android:layout_width="91dp"
                android:layout_height="21dp"
                android:background="@drawable/alarm"
                android:textColor="@color/grey"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="6dp"
                android:text="@string/date">
            </EditText>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="312dp"
            android:layout_height="96dp"
            android:background="@drawable/alarm"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="24dp">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:background="@drawable/alarm"
                android:textColor="@color/grey"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="6dp"
                android:text="@string/Taskdescription">
            </EditText>
        </LinearLayout>
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button1"
        android:text="@string/DeleteActivity"
        android:textColor="@color/white"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="196dp"
        android:textSize="18dp"
        android:textAllCaps="false">
    </androidx.appcompat.widget.AppCompatButton>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/CreateActivity"
        android:textColor="@color/white"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="16dp"
        android:textSize="18dp"
        android:textAllCaps="false">
    </androidx.appcompat.widget.AppCompatButton>
</GridLayout>