<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Shablon1"
    android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Registration"
            android:textSize="24dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="23dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/text"/>
        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="131dp"
            android:background="@color/Shablon1"
            android:src="@drawable/Back"
            android:layout_toRightOf="@id/text">
        </androidx.appcompat.widget.AppCompatImageButton>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="312dp"
            android:layout_height="32dp"
            android:background="@drawable/alarm"
            android:orientation="horizontal"
            android:layout_marginTop="224dp"
            android:layout_marginLeft="26dp"
            android:id="@+id/Name">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:background="@drawable/alarm"
                android:textColor="@color/grey"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="6dp"
                android:text="@string/LoginName">
            </EditText>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="312dp"
            android:layout_height="32dp"
            android:background="@drawable/alarm"
            android:orientation="horizontal"
            android:layout_marginTop="272dp"
            android:layout_marginLeft="26dp">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:background="@drawable/alarm"
                android:textColor="@color/grey"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="6dp"
                android:text="@string/LoginMail">
            </EditText>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="312dp"
            android:layout_height="32dp"
            android:background="@drawable/alarm"
            android:orientation="horizontal"
            android:layout_marginTop="320dp"
            android:layout_marginLeft="26dp">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:background="@drawable/alarm"
                android:textColor="@color/grey"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="6dp"
                android:text="@string/LoginPassword">
            </EditText>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/Registration"
            android:textColor="@color/white"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="368dp"
            android:textSize="18dp"
            android:textAllCaps="false">
        </androidx.appcompat.widget.AppCompatButton>
    </LinearLayout>

</RelativeLayout>